# omni-robot

./: .gitignore  AGENTS.md  DEVELOPMENT_RULES.md  PROJECT_STRUCTURE.md  README.md
experiment_tools/: CMakeLists.txt  README.md  package.xml
experiment_tools/scripts/: export_results.py  record_bag.sh
nav_bringup/: CMakeLists.txt  README.md  package.xml
nav_bringup/config/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  teb_local_planner_params.yaml
nav_bringup/launch/: navigation.launch
nav_bringup/maps/: placeholder.yaml
omni_base_controller/: CMakeLists.txt  README.md  package.xml
omni_base_controller/launch/: controller.launch
omni_base_controller/scripts/: omni_kinematics.py
robot_description/: CMakeLists.txt  README.md  package.xml
robot_description/launch/: display.launch
robot_description/rviz/: robot.rviz
robot_description/urdf/: omni_robot.urdf.xacro
scripts/: check_env.sh  env_setup.sh  install_dependencies.sh
slam_benchmark/: CMakeLists.txt  README.md  package.xml
slam_benchmark/launch/: gmapping.launch  hector.launch
slam_benchmark/scripts/: run_benchmark.sh
stereo_pipeline/: CMakeLists.txt  README.md  package.xml
stereo_pipeline/config/: stereo_params.yaml
stereo_pipeline/launch/: stereo_to_scan.launch
