<?xml version="1.0"?>
<package format="2">
  <name>experiment_tools</name>
  <version>0.1.0</version>
  <description>Utility scripts for bag recording, export, and experiment bookkeeping.</description>
  <maintainer email="hnquang@todo.todo">hnquang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export/>
</package>
