<?xml version="1.0"?>
<package format="2">
  <name>nav_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for navigation stack bringup.</description>
  <maintainer email="hnquang@todo.todo">hnquang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

  <export/>
</package>
