<?xml version="1.0"?>
<package format="2">
  <name>omni_base_controller</name>
  <version>0.1.0</version>
  <description>Controller skeleton for omni-directional kinematics and velocity interfacing.</description>
  <maintainer email="hnquang@todo.todo">hnquang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>

  <export/>
</package>
