<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.1.0</version>
  <description>Robot model, frames, and visualization assets for the omni thesis platform.</description>
  <maintainer email="hnquang@todo.todo">hnquang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export/>
</package>
