<?xml version="1.0"?>
<package format="2">
  <name>slam_benchmark</name>
  <version>0.1.0</version>
  <description>Benchmark launch and helper scripts for comparing SLAM backends.</description>
  <maintainer email="hnquang@todo.todo">hnquang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>

  <export/>
</package>
