<?xml version="1.0"?>
<package format="2">
  <name>stereo_pipeline</name>
  <version>0.1.0</version>
  <description>Skeleton package for stereo image processing and virtual scan generation.</description>
  <maintainer email="hnquang@todo.todo">hnquang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <export/>
</package>
